<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fetchFragment"
    >
    <fragment
        android:id="@+id/fetchFragment"
        android:name="com.sas.productstest.presentation.fetch.FetchFragment"
        android:label="@string/title_fetch"
        tools:layout="@layout/fragment_fetch"
        >

        <action
            android:id="@+id/action_fetchFragment_to_productListFragment"
            app:destination="@id/productListFragment"
            />

    </fragment>

    <fragment
        android:id="@+id/productListFragment"
        android:name="com.sas.productstest.presentation.products.ProductListFragment"
        android:label="@string/title_product_list"
        tools:layout="@layout/fragment_product_list"
        >

        <action
            android:id="@+id/action_productListFragment_to_editProductFragment"
            app:destination="@id/editProductFragment"
            />


    </fragment>

    <fragment
        android:id="@+id/editProductFragment"
        android:name="com.sas.productstest.presentation.edit.EditProductFragment"
        android:label="@string/title_edit_product"
        tools:layout="@layout/fragment_edit_product"
        >

        <argument
            android:name="productId"
            app:argType="integer"
            />

    </fragment>

</navigation>