<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".presentation.fetch.FetchFragment"
        >

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="320dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_fetch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:text="@string/get_data"
                android:textAllCaps="false"
                android:textSize="16sp"
                />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:visibility="invisible"
                tools:visibility="visible"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_show_cache"
                style="@style/Widget.App.Button.OutlinedGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:text="@string/show_cache"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="visible"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="320dp"
            tools:visibility="gone"
            >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@null"
                android:src="@android:drawable/stat_notify_error"
                app:tint="@color/error_color"
                />

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textColor="@color/error_color"
                android:textSize="16sp"
                tools:text="@string/error_need_retry"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_retry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingVertical="14dp"
                android:text="@string/retry"
                android:textAllCaps="false"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_show_cache_error"
                style="@style/Widget.App.Button.OutlinedGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingVertical="14dp"
                android:text="@string/show_cache"
                android:textAllCaps="false"
                android:textSize="16sp"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>